--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>aveshack</title>
+    <title>AveShack | Partagez vos images sur Internet</title>
   </head>
-  <body>
+  <body class="font-sans antialiased bg-background text-on-background">
     <noscript>
-      <strong>We're sorry but aveshack doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Désolé, ce site web requiert Javascript. Veuillez l'activer pour continuer.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
